# Ensimag_surface_reconstruction

./: .gitignore  .gitmodules  README.md
base_projets/: .gitignore  CMakeLists.txt
base_projets/models/: buddha.off  cube_closed.off  cylindre.off  half_cylindre.off  pipes_round.off  pipes_squared.off  sphere_piece.off  test.off  tetrahedron.off  tetrahedron_2.off  thing_rounded.off  thing_squared.off
base_projets/release/: CMakeLists.txt  main.cpp
base_projets/shader/: fragment.glsl  vertex.glsl
base_projets/src/: AbstractMesh.cpp  AbstractMesh.h  Box.cpp  Box.h  GLFW_define.h  ImplicitFunction.cpp  ImplicitFunction.h  LocalShapeFunction.cpp  LocalShapeFunction.h  LossFunction.cpp  LossFunction.h  MPUFunction.cpp  MPUFunction.h  Mesh.cpp  Mesh.h  MeshHE.cpp  MeshHE.h  Mesh_Reconstruction.cpp  Mesh_Reconstruction.h  Node.cpp  Node.h  Object.cpp  Object.h  OneFunction.cpp  OneFunction.h  main.cpp  shader.cpp
base_projets/test/: CMakeLists.txt  Implicit_plan_function.cpp  Implicit_plan_function.h  test_export_sphere.cpp  test_marching_cubes.cpp  test_no_graphic.cpp  test_points.cpp  test_solvers.cpp
